# Obsidian-Transcript-Server

./: .env.example  .gitignore  README.md  pyproject.toml
src/lecture_pipeline/: __init__.py  api.py  audio.py  cli.py  config.py  diarization.py  lm_studio.py  markdown.py  models.py  paths.py  pipeline.py  prompts.py  storage.py  transcription.py  utils.py
