[project]
name = "obsidian-lecture-pipeline"
version = "0.2.8"
description = "Local lecture transcription and summarization pipeline for Obsidian"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<0.29",
  "orjson>=3.10,<4.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "python-multipart>=0.0.20,<0.1",
  "typer>=0.16,<0.17",
  "uvicorn>=0.34,<0.35",
]

[project.optional-dependencies]
audio = [
  "mlx-whisper>=0.4,<0.5",
  "pyannote.audio>=4.0,<5.0",
  "torch>=2.8,<3.0",
]

[project.scripts]
lecture-pipeline = "lecture_pipeline.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
